syntax = "proto3";

package housing;

// ===================================================
// SERVICE DEFINITION
// ===================================================
service HousingService {
  // Core Listings
  // UPDATED: Now returns a lean CreateResponse to match the Dashboard pattern
  rpc CreateHouseListing (CreateHouseListingRequest) returns (BaseHouseListingCreateResponse);
  
  rpc GetHouseListingById (GetHouseListingByIdRequest) returns (BaseHouseListingResponse);
  rpc GetListingsByOwner (GetListingsByOwnerRequest) returns (ListHouseListingsResponse);
  rpc SearchListings (SearchHouseListingsRequest) returns (ListHouseListingsResponse);

  // Lifecycle & Management
  rpc UpdateHouseListing (UpdateHouseListingRequest) returns (BaseHouseListingResponse);
  rpc UpdateListingStatus (UpdateHouseListingStatusRequest) returns (BaseHouseListingResponse);
  rpc ArchiveHouseListing (ArchiveHouseListingRequest) returns (BaseEmptyResponse);

  // Viewings
  rpc ScheduleViewing (ScheduleViewingRequest) returns (BaseHouseViewingResponse);
}

// ===================================================
// SHARED PAYLOADS
// ===================================================
message ErrorPayload {
  string code = 1;
  string message = 2;
  string details = 3;
}

message UserBasic {
  string id = 1;
  string fullName = 2;
  string phone = 3;
}

message AccountBasic {
  string id = 1;
  string name = 2;
}

message CategoryBasic {
  string id = 1;
  string name = 2;
  string slug = 3;
  string vertical = 4;
}

message HouseImage {
  string id = 1;
  string url = 2;
  bool isMain = 3;
}

// ===================================================
// ENTITIES (RICH DATA)
// ===================================================
message HouseListing {
  string id = 1;
  string externalId = 2;
  string title = 3;
  string description = 4;
  string listingType = 5;
  double price = 6;
  string currency = 7;
  int32 bedrooms = 8;
  int32 bathrooms = 9;
  repeated string amenities = 10;
  bool isFurnished = 11;
  string locationCity = 12;
  string locationNeighborhood = 13;
  string address = 14;
  string status = 15;
  string createdAt = 16;
  string updatedAt = 17;
  string imageUrl = 18; 
  CategoryBasic category = 19;
  UserBasic creator = 20;
  AccountBasic account = 21;
  repeated HouseImage images = 22;
}

message HouseViewing {
  string id = 1;
  string houseId = 2;
  string viewerId = 3;
  string viewingDate = 4;
  string status = 5;
  string notes = 6;
  string createdAt = 7;
}

// ===================================================
// REQUEST MESSAGES
// ===================================================

message CreateHouseListingRequest {
  // Identity Anchor Fields - Removed Name strings
  string creatorId = 1;
  string accountId = 2;
  string ownerId = 3; 

  string title = 4;
  string description = 5;
  string categoryId = 6;
  string listingType = 7;
  double price = 8;
  string currency = 9;
  int32 bedrooms = 10;
  int32 bathrooms = 11;
  repeated string amenities = 12;
  bool isFurnished = 13;
  string locationCity = 14;
  string locationNeighborhood = 15;
  string address = 16;
  repeated string imageUrls = 17;
}

message SearchHouseListingsRequest {
  optional string city = 1;
  optional string categoryId = 2;
  optional string listingType = 3;
  optional double minPrice = 4;
  optional double maxPrice = 5;
  optional int32 bedrooms = 6;
  optional int32 limit = 7;
  optional int32 offset = 8;
}

message UpdateHouseListingRequest {
  string listingId = 1;
  string callerId = 2;
  string userRole = 3;
  UpdateHouseListingData data = 4;
}

message UpdateHouseListingData {
  optional string title = 1;
  optional string description = 2;
  optional double price = 3;
  optional int32 bedrooms = 4;
  optional int32 bathrooms = 5;
  optional bool isFurnished = 6;
  repeated string amenities = 7;
  optional string locationCity = 8;
  optional string locationNeighborhood = 9;
  optional string address = 10;
  optional string status = 11; 
}

message UpdateHouseListingStatusRequest {
  string id = 1;
  string ownerId = 2;
  string status = 3;
}

message ArchiveHouseListingRequest {
  string id = 1;
  string ownerId = 2;
}

message ScheduleViewingRequest {
  string houseId = 1;
  string callerId = 2;
  string userRole = 3;
  string viewingDate = 4;
  optional string targetViewerId = 5;
  optional string notes = 6;
}

message GetHouseListingByIdRequest { string id = 1; }
message GetListingsByOwnerRequest { string ownerId = 1; }

// ===================================================
// RESPONSE MESSAGES
// ===================================================

// NEW: Ultra-Lean data for creation
message HouseListingCreateData {
  string id = 1;
  string status = 2;
  string createdAt = 3;
}

// NEW: Specific response for creation to solve TS Type Errors
message BaseHouseListingCreateResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  HouseListingCreateData data = 4;
  ErrorPayload error = 5;
}

message BaseHouseListingResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  HouseListing data = 4;
  ErrorPayload error = 5;
}

message ListHouseListingsResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  repeated HouseListing data = 4;
  ErrorPayload error = 5;
}

message BaseHouseViewingResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  HouseViewing data = 4;
  ErrorPayload error = 5;
}

message BaseEmptyResponse {
  bool success = 1;
  string code = 2;
  string message = 3;
  ErrorPayload error = 4;
}